addded structure to batman oop

--- a/python/batman/coinsecure.ipynb
+++ b/python/batman/coinsecure.ipynb
@@ -2,26 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ccxt, abc\n",
-    "from statistics import mean"
+    "import ccxt, abc, time, ssl\n",
+    "from statistics import mean\n",
+    "from threading import Thread, Event\n",
+    "\n",
+    "updated = Event()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "class Classifier(abc.ABC):\n",
+    "class Exchange(ccxt.coinsecure):\n",
     "    def __init__(self):\n",
-    "        self.exchange = ccxt.coinsecure()\n",
+    "        self.data = None\n",
     "        super().__init__()\n",
+    "        \n",
+    "    def check_for_update(self):\n",
+    "        def thread_exec():\n",
+    "            prevTimestamp = None\n",
+    "            while True:\n",
+    "                try:\n",
+    "                    response = self.fetchTicker('BTC/INR')\n",
+    "                    if response['timestamp'] != prevTimestamp:\n",
+    "                        self.data, prevTimestamp = response['info'], response['timestamp']\n",
+    "                        print(self.data)\n",
+    "                        updated.set()\n",
+    "                    else: updated.clear()\n",
+    "                except ssl.SSLEOFError: print('Non-fatal error occured.')\n",
+    "                time.sleep(2)\n",
+    "        thread = Thread(target=thread_exec)\n",
+    "        thread.start()\n",
+    "\n",
+    "class Classifier(abc.ABC):\n",
+    "    def __init__(self, exchange): self.exchange = exchange\n",
     "    \n",
     "    @abc.abstractmethod\n",
     "    def predict(self): pass"
@@ -29,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,82 +67,90 @@
     "        else: del self[0]\n",
     "            \n",
     "class SMA(Classifier):\n",
-    "    def __init__(self, window_size=20):\n",
-    "        global __Window\n",
+    "    def __init__(self, exchange, *, window_size=20):\n",
     "        self.__window_size = window_size\n",
     "        self.__sp_window, self.__bp_window = _Window(window_size), _Window(window_size)\n",
-    "        super().__init__()\n",
+    "        super().__init__(exchange)\n",
     "    \n",
     "    def predict(self):\n",
     "        def classify(avg, price):\n",
     "            if price < avg: return -1\n",
     "            if price > avg: return 1\n",
     "            return 0\n",
-    "        #response = self.exchange.fetchTicker('BTC/INR')\n",
-    "        #to do -- convert response to a tuple of SP and BP\n",
-    "        sp, bp = 0, 0\n",
-    "        self.__sp_window.append(sp), self.__bp_window.append(bp)\n",
-    "        return classify(mean(self.__sp_window), sp), classify(mean(self.__bp_window), bp)"
+    "        \n",
+    "        def thread_exec():\n",
+    "            sp, bp, predict_sp, predict_bp = None, None, None, None\n",
+    "            while True:\n",
+    "                updated.wait()\n",
+    "                if sp != self.exchange.data['ask']:\n",
+    "                    sp = self.exchange.data['ask']\n",
+    "                    self.__sp_window.append(sp)\n",
+    "                    predict_sp = classify(mean(self.__sp_window), sp)\n",
+    "                if bp != self.exchange.data['bid']:\n",
+    "                    bp = self.exchange.data['bid']\n",
+    "                    self.__bp_window.append(bp)\n",
+    "                    predcit_bp = classify(mean(self.__bp_window), bp)\n",
+    "                print(self.__sp_window, self.__bp_window)\n",
+    "                print('sp: {}'.format(predict_sp), 'bp: {}'.format(predcit_bp))\n",
+    "                time.sleep(2)\n",
+    "        thread = Thread(target=thread_exec)\n",
+    "        thread.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exchange = Exchange()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exchange.checkForUpdate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "predictor = SMA(3)"
+    "predictor = SMA(exchange, window_size=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0]\n"
+      "{'lastPrice': 57650000, 'timestamp': 1518473183640, 'bid': 57610100, 'ask': 58700000, 'fiatvolume': 481711009, 'coinvolume': 833000000, 'open': 58299897, 'high': 59000000, 'low': 55255000}[58700000]\n",
+      " [57610100]\n",
+      "sp: 0 bp: 0\n",
+      "[58700000] [57610100]\n",
+      "sp: 0 bp: 0\n",
+      "{'lastPrice': 57610085, 'timestamp': 1518474457751, 'bid': 57610100, 'ask': 58700000, 'fiatvolume': 483727362, 'coinvolume': 836500000, 'open': 58299897, 'high': 59000000, 'low': 55255000}\n",
+      "[58700000] [57610100]\n",
+      "sp: 0 bp: 0\n",
+      "[58700000] [57610100]\n",
+      "sp: 0 bp: 0\n"
      ]
-    }
-   ],
-   "source": [
-    "print(predictor._SMA__sp_window)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 0)"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "predictor.predict()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
