--- a/python/batman/coinsecure.ipynb
+++ b/python/batman/coinsecure.ipynb
@@ -9,6 +9,7 @@
     "import ccxt, abc, time, ssl\n",
     "from statistics import mean\n",
     "from threading import Thread, Event\n",
+    "from matplotlib import pyplot as pl\n",
     "\n",
     "updated = Event()"
    ]
@@ -17,7 +18,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -37,7 +37,6 @@
     "                        self.data, prevTimestamp = response['info'], response['timestamp']\n",
     "                        print(self.data)\n",
     "                        updated.set()\n",
-    "                    else: updated.clear()\n",
     "                except ssl.SSLEOFError: print('Non-fatal error occured.')\n",
     "                time.sleep(2)\n",
     "        thread = Thread(target=thread_exec)\n",
@@ -68,7 +67,7 @@
     "            \n",
     "class SMA(Classifier):\n",
     "    def __init__(self, exchange, *, window_size=20):\n",
-    "        self.__window_size = window_size\n",
+    "        self.__window_size, self.predict_sp, self.predict_bp = window_size, None, None\n",
     "        self.__sp_window, self.__bp_window = _Window(window_size), _Window(window_size)\n",
     "        super().__init__(exchange)\n",
     "    \n",
@@ -79,7 +78,7 @@
     "            return 0\n",
     "        \n",
     "        def thread_exec():\n",
-    "            sp, bp, predict_sp, predict_bp = None, None, None, None\n",
+    "            sp, bp = None, None\n",
     "            while True:\n",
     "                updated.wait()\n",
     "                if sp != self.exchange.data['ask']:\n",
@@ -92,7 +91,7 @@
     "                    predcit_bp = classify(mean(self.__bp_window), bp)\n",
     "                print(self.__sp_window, self.__bp_window)\n",
     "                print('sp: {}'.format(predict_sp), 'bp: {}'.format(predcit_bp))\n",
-    "                time.sleep(2)\n",
+    "                updated.clear()\n",
     "        thread = Thread(target=thread_exec)\n",
     "        thread.start()"
    ]
@@ -118,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "predictor = SMA(exchange, window_size=3)"
@@ -130,27 +127,151 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lastPrice': 57650000, 'timestamp': 1518473183640, 'bid': 57610100, 'ask': 58700000, 'fiatvolume': 481711009, 'coinvolume': 833000000, 'open': 58299897, 'high': 59000000, 'low': 55255000}[58700000]\n",
-      " [57610100]\n",
-      "sp: 0 bp: 0\n",
-      "[58700000] [57610100]\n",
-      "sp: 0 bp: 0\n",
-      "{'lastPrice': 57610085, 'timestamp': 1518474457751, 'bid': 57610100, 'ask': 58700000, 'fiatvolume': 483727362, 'coinvolume': 836500000, 'open': 58299897, 'high': 59000000, 'low': 55255000}\n",
-      "[58700000] [57610100]\n",
-      "sp: 0 bp: 0\n",
-      "[58700000] [57610100]\n",
+      "{'lastPrice': 58500000, 'timestamp': 1518518778320, 'bid': 57200000, 'ask': 58499800, 'fiatvolume': 342324301, 'coinvolume': 589400000, 'open': 58299897, 'high': 59000000, 'low': 57175099}\n",
+      "[58499800] [57200000]\n",
       "sp: 0 bp: 0\n"
      ]
     }
    ],
    "source": [
-    "predictor.predict()"
+    "class Plot:\n",
+    "    def __init__(self, data, predicted):\n",
+    "        self.fig, self.data, self.predicted = pl.figure('Live'), data, predicted\n",
+    "        self.tick = [data]\n",
+    "\n",
+    "    def update(self):\n",
+    "        def thread_exec():\n",
+    "            while True:\n",
+    "                updated.wait()\n",
+    "                self.tick.append(data)\n",
+    "                pl.plot(tick)\n",
+    "                pl.scatter(predicted)\n",
+    "                self.fig.canvas.draw()\n",
+    "                updated.clear()\n",
+    "        thread = Thread(target=thread_exec)\n",
+    "        thread.start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x8d2621c828>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-6:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\connectionpool.py\", line 387, in _make_request\n",
+      "    six.raise_from(e, None)\n",
+      "  File \"<string>\", line 2, in raise_from\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\connectionpool.py\", line 383, in _make_request\n",
+      "    httplib_response = conn.getresponse()\n",
+      "  File \"c:\\program files\\python36\\lib\\http\\client.py\", line 1331, in getresponse\n",
+      "    response.begin()\n",
+      "  File \"c:\\program files\\python36\\lib\\http\\client.py\", line 297, in begin\n",
+      "    version, status, reason = self._read_status()\n",
+      "  File \"c:\\program files\\python36\\lib\\http\\client.py\", line 258, in _read_status\n",
+      "    line = str(self.fp.readline(_MAXLINE + 1), \"iso-8859-1\")\n",
+      "  File \"c:\\program files\\python36\\lib\\socket.py\", line 586, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "  File \"c:\\program files\\python36\\lib\\ssl.py\", line 1009, in recv_into\n",
+      "    return self.read(nbytes, buffer)\n",
+      "  File \"c:\\program files\\python36\\lib\\ssl.py\", line 871, in read\n",
+      "    return self._sslobj.read(len, buffer)\n",
+      "  File \"c:\\program files\\python36\\lib\\ssl.py\", line 631, in read\n",
+      "    v = self._sslobj.read(len, buffer)\n",
+      "socket.timeout: The read operation timed out\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\requests\\adapters.py\", line 440, in send\n",
+      "    timeout=timeout\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\connectionpool.py\", line 639, in urlopen\n",
+      "    _stacktrace=sys.exc_info()[2])\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\util\\retry.py\", line 357, in increment\n",
+      "    raise six.reraise(type(error), error, _stacktrace)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\packages\\six.py\", line 686, in reraise\n",
+      "    raise value\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\connectionpool.py\", line 601, in urlopen\n",
+      "    chunked=chunked)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\connectionpool.py\", line 389, in _make_request\n",
+      "    self._raise_timeout(err=e, url=url, timeout_value=read_timeout)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\urllib3\\connectionpool.py\", line 309, in _raise_timeout\n",
+      "    raise ReadTimeoutError(self, url, \"Read timed out. (read timeout=%s)\" % timeout_value)\n",
+      "urllib3.exceptions.ReadTimeoutError: HTTPSConnectionPool(host='api.coinsecure.in', port=443): Read timed out. (read timeout=10)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\ccxt\\base\\exchange.py\", line 349, in fetch\n",
+      "    proxies=self.proxies\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\requests\\sessions.py\", line 508, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\requests\\sessions.py\", line 618, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\requests\\adapters.py\", line 521, in send\n",
+      "    raise ReadTimeout(e, request=request)\n",
+      "requests.exceptions.ReadTimeout: HTTPSConnectionPool(host='api.coinsecure.in', port=443): Read timed out. (read timeout=10)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\program files\\python36\\lib\\threading.py\", line 916, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\program files\\python36\\lib\\threading.py\", line 864, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"<ipython-input-2-24497371a2f6>\", line 11, in thread_exec\n",
+      "    response = self.fetchTicker('BTC/INR')\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\ccxt\\coinsecure.py\", line 202, in fetch_ticker\n",
+      "    response = self.publicGetExchangeTicker(params)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\ccxt\\base\\exchange.py\", line 302, in request\n",
+      "    return self.fetch2(path, api, method, params, headers, body)\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\ccxt\\base\\exchange.py\", line 299, in fetch2\n",
+      "    return self.fetch(request['url'], request['method'], request['headers'], request['body'])\n",
+      "  File \"c:\\program files\\python36\\lib\\site-packages\\ccxt\\base\\exchange.py\", line 355, in fetch\n",
+      "    raise RequestTimeout(' '.join([self.id, method, url, 'request timeout']))\n",
+      "ccxt.base.errors.RequestTimeout: coinsecure GET https://api.coinsecure.in/v1/exchange/ticker request timeout\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Plot(exchange.data['bid'], predictor.predict_bp).update()\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
